--- a/Train.ipynb
+++ b/Train.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "8b1dd267",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Code Starting**\n",
+      "**End of Importing**\n"
+     ]
+    }
+   ],
    "source": [
     "print('**Code Starting**')\n",
     "\n",
@@ -33,6 +42,16 @@
     "from utils import *\n",
     "\n",
     "print('**End of Importing**')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "624ea28d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision.ops import DeformConv2d\n"
    ]
   },
   {
@@ -117,6 +136,9 @@
     "\n",
     "# Use parse_known_args()\n",
     "args, unknown = parser.parse_known_args()\n",
+    "\n",
+    "print('args.local_train',args.local_train)\n",
+    "\n",
     "\n",
     "if args.model_path is not None:\n",
     "    args.batch_size=8\n",
