--- a/Train.ipynb
+++ b/Train.ipynb
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "699c2005",
+   "id": "ed38715c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f19e83e4",
+   "id": "fbb9204c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
     "    \"learning_rate\": args.lr,\n",
     "    \"backbone_class\": args.backbone_class,\n",
     "    \"dataset\": args.dataset,\n",
-    "    \"epochs\": args.max_epoch,\n",
+    "    \"Max epochs\": args.max_epoch,\n",
     "    \"Segmentation Training\":args.seg_ild,\n",
     "    \"Classification Training\":args.cls_ild,\n",
     "    \"freeze_all\": args.freeze_all,\n",
@@ -558,7 +558,8 @@
     "        f.write(f'Acc: {accuracy:.3f}% ({correct}/{total})| CE: {train_ce_loss:.4f}| Total Loss: {train_loss:.4f}| IoU :{averageIoU:.4f}\\n')\n",
     "\n",
     "    \n",
-    "    wandb.log({\"Training IoU\": averageIoU,\n",
+    "    wandb.log({\"Current Epoch\": epoch,\n",
+    "               \"Training IoU\": averageIoU,\n",
     "               \"Training Accuracy\":accuracy})\n",
     "    train_total_losses.append(train_loss)\n",
     "    train_iou.append(averageIoU)\n",
