--- a/Train.ipynb
+++ b/Train.ipynb
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ed38715c",
+   "id": "4d7ef369",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb9204c",
+   "id": "86429c47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
     "        f.write(f'Acc: {accuracy:.3f}% ({correct}/{total})| CE: {train_ce_loss:.4f}| Total Loss: {train_loss:.4f}| IoU :{averageIoU:.4f}\\n')\n",
     "\n",
     "    \n",
-    "    wandb.log({\"Current Epoch\": epoch,\n",
+    "    wandb.log({\"Current Training Epoch\": epoch,\n",
     "               \"Training IoU\": averageIoU,\n",
     "               \"Training Accuracy\":accuracy})\n",
     "    train_total_losses.append(train_loss)\n",
@@ -679,7 +679,8 @@
     "        f.write(f'cur_iou:{averageIoU},best_iou:{best_iou}\\n')\n",
     "        f.write(f'curr_Acc:{accuracy},best_Acc:{best_acc}\\n')\n",
     "        \n",
-    "    wandb.log({\"Current Testing IoU\": averageIoU,\n",
+    "    wandb.log({\"Testing Epoch\": epoch,\n",
+    "               ,\"Current Testing IoU\": averageIoU,\n",
     "               \"Overall Best Testing Iou\":best_iou,\n",
     "               \"Current Testing Accuracy\":accuracy,\n",
     "               \"Best Testing Accuracy\": best_acc})\n",
