--- a/Train.ipynb
+++ b/Train.ipynb
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bb799206",
+   "id": "7919cbd5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7eb72c",
+   "id": "12c515cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
     "\n",
     "run=wandb.init(\n",
     "    # set the wandb project where this run will be logged\n",
-    "    project=\"icip24-segmentation\",\n",
+    "    project=\"icip24-segmentation-differ_rect_layers\",\n",
     "    entity=\"ramytrm\",\n",
     "    group=name,\n",
     "    \n",
