--- a/Train.ipynb
+++ b/Train.ipynb
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7919cbd5",
+   "id": "f775a4bf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12c515cb",
+   "id": "1af8fea7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,8 +357,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainloader = DataLoader(train, batch_size=batchsize, shuffle=True)\n",
-    "testloader = DataLoader(test, batch_size=batchsize, shuffle=False)"
+    "trainloader = DataLoader(train, batch_size=batchsize, shuffle=True, num_workers=4)\n",
+    "testloader = DataLoader(test, batch_size=batchsize, shuffle=False, num_workers=4)"
    ]
   },
   {
